# FortUTF

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  index.html  mkdocs.yml  search.html  sitemap.xml
.github/workflows/: futs.yml  futs_intel.yml  futs_lfortran.yml  futs_mac.yml  futs_nvfortran.yml  futs_windows.yml
assertions/: index.html
cmake/: fortutf.cmake
docs/: assertions.md  index.md  usage.md
examples/demo_project/: CMakeLists.txt
examples/demo_project/src/: demo_functions.f90
examples/demo_project/tests/: run_tests.f90  test_functions.f90
search/: search_index.json
src/: assertions.f90  specials.f90  string_check.f90  suite.f90  test_suite.f90  utilities.f90
tests/: CMakeLists.txt  test_assertions.f90  test_assertions_equal.f90
tests/test_assertions/: test_aequal_int.f90  test_aequal_real.f90  test_assert_bool.f90  test_equal_char.f90  test_equal_complex.f90  test_equal_int.f90  test_equal_logical.f90  test_equal_real.f90  test_gt_int.f90  test_gt_real.f90  test_gteq_int.f90  test_gteq_real.f90  test_ischar.f90  test_iscomplex.f90  test_isint.f90  test_isreal.f90  test_lt_int.f90  test_lt_real.f90  test_lteq_int.f90  test_lteq_real.f90  test_nequal_char.f90  test_nequal_int.f90  test_nequal_logical.f90  test_nequal_real.f90  test_real_isreal.f90  test_val_in_arr.f90
tests/test_fixtures/: test_scenario.f90
tests/test_specials/: test_specials.f90
tests/test_string_check/: test_string_compare.f90
tests/test_suite/: test_failing.f90  unfinished_test_check.f90
tests/test_utilities.f90/: test_utilities.f90
usage/: index.html
