CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

ENABLE_LANGUAGE(Fortran)

PROJECT(FUTS_TESTS)

SET(CMAKE_Fortran_COMPILER gfortran)

GET_FILENAME_COMPONENT(PROJECT_ROOT ../ ABSOLUTE)

MESSAGE(STATUS "[FUTS Tests Build]")
MESSAGE(STATUS "\tProject Source Directory: ${PROJECT_ROOT}")

FILE(GLOB SRC_FILES ${PROJECT_ROOT}/src/*.f90)
FILE(GLOB TESTS ${CMAKE_SOURCE_DIR}/*.f90)

ADD_LIBRARY(FUTS ${SRC_FILES})

MESSAGE(STATUS "\tTest List:")

FOREACH(TEST ${TESTS})
    GET_FILENAME_COMPONENT(TEST_NAME ${TEST} NAME_WLE)
    MESSAGE(STATUS "\t\t- ${TEST_NAME}")
    ADD_EXECUTABLE(${TEST_NAME} ${SRC_FILES} ${TEST})
    TARGET_LINK_LIBRARIES(
        ${TEST_NAME}
        PUBLIC
        FUTS
    )
    SET_TARGET_PROPERTIES(
        ${TEST_NAME}
        PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )
ENDFOREACH()