MESSAGE(STATUS "[FortUTF Tests Build]")
MESSAGE(STATUS "\tProject Source Directory: ${PROJECT_ROOT}")

FILE(GLOB TESTS ${CMAKE_CURRENT_SOURCE_DIR}/*.f90)

MESSAGE(STATUS "\tTest List:")

FOREACH(TEST ${TESTS})
    GET_FILENAME_COMPONENT(TEST_NAME ${TEST} NAME_WLE)
    MESSAGE(STATUS "\t\t- ${TEST_NAME}")
    ADD_EXECUTABLE(${TEST_NAME} ${TEST})
    TARGET_LINK_LIBRARIES(
        ${TEST_NAME}
        PUBLIC
        FortUTF
    )
    SET_TARGET_PROPERTIES(
        ${TEST_NAME}
        PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    )
    TARGET_INCLUDE_DIRECTORIES(
        ${TEST_NAME} PUBLIC ${CMAKE_BINARY_DIR}/modules
    )

ENDFOREACH()