MESSAGE(STATUS "[FUTS Example Project Build]")
MESSAGE(STATUS "\tProject Source Directory: ${PROJECT_ROOT}")

FILE(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.f90)
FILE(GLOB TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.f90)
SET(TEST_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/tests/run_tests.f90)
LIST(REMOVE_ITEM TEST_SRCS ${TEST_SCRIPT})

ADD_EXECUTABLE(DEMO_PROJ ${SRC_FILES} ${TEST_SRCS} ${TEST_SCRIPT})
TARGET_LINK_LIBRARIES(
    DEMO_PROJ
    PUBLIC
    FUTS
)
SET_TARGET_PROPERTIES(
    DEMO_PROJ
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
TARGET_INCLUDE_DIRECTORIES(
    DEMO_PROJ PUBLIC ${CMAKE_BINARY_DIR}/modules
)