CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(DEMO_PROJ)

ENABLE_LANGUAGE(Fortran)

SET(CMAKE_Fortran_COMPILER gfortran)

MESSAGE(STATUS "[FUTS Example Project Build]")
MESSAGE(STATUS "\tProject Source Directory: ${PROJECT_ROOT}")

GET_FILENAME_COMPONENT(FORTUTF_ROOT ../../ ABSOLUTE)

SET(TEST_DIR ${CMAKE_SOURCE_DIR}/tests)
FILE(GLOB SRC_FILES ${CMAKE_SOURCE_DIR}/src/*.f90)

INCLUDE(${FORTUTF_ROOT}/cmake/fortutf.cmake)
FIND_TESTS()


ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES} ${TEST_SRCS} ${TEST_SCRIPT})


TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME} PUBLIC ${CMAKE_BINARY_DIR}/modules
)
