CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(DEMO_PROJ LANGUAGES Fortran)

MESSAGE(STATUS "[FortUTF Example Project Build]")
MESSAGE(STATUS "\tProject Source Directory: ${PROJECT_ROOT}")

GET_FILENAME_COMPONENT(FORTUTF_ROOT ../../ ABSOLUTE)

SET(FORTUTF_PROJECT_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
SET(FORTUTF_PROJECT_TEST_FILES "")
ADD_LIBRARY(
	DEMO_FUNCTIONS
	src/demo_functions.f90
)
SET_TARGET_PROPERTIES(
	DEMO_FUNCTIONS
	PROPERTIES
	Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/mod
)

INCLUDE(${FORTUTF_ROOT}/cmake/fortutf.cmake)
FortUTF_Find_Tests(
	OPTIONS -Werror
	LIBRARIES DEMO_FUNCTIONS
	MODULE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/mod
)

